# tf-plan-analyzer

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  JSON_REPORT_GUIDE.md  OBFUSCATION_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  analyze_plan.py  baseline-coverage-summary.txt  baseline-coverage.json  generate_html_report.py  generate_large_test_plan.py  gsp-ignore-config.json  ignore_config.example.json  multi_env_comparator.py  pyproject.toml  sensitive_obfuscator.py  setup.py  test_change_detection.py  test_compare_enhancements_unit.py  test_e2e_compare_enhancements.py  test_e2e_multi_env.py  test_e2e_obfuscate.py  test_e2e_sensitive_change.py  test_hcl_reference.py  test_ignore_utils.py  test_multi_env_unit.py  test_salt_manager.py  test_sensitive_obfuscator.py
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md  data_model.md
docs/: function-glossary.md  style-guide.md
examples/: normalizations.json
src/: __init__.py
test_data/: dev-plan.json  dev-sensitive-check.json  env-deep-nested.json  env-missing-field-1.json  env-name-norm-1.json  env-name-norm-2.json  env-resource-id-1.json  env-resource-id-2.json  env-sensitive-char-1.json  env-sensitive-char-2.json  ignore_config.json  ignore_config_with_resource_id_norm.json  ignore_test_config.json  ignore_with_normalization.json  large-plan-1000-obfuscated.json  normalization_config_resource_ids.json  normalizations_test.json  prod-sensitive-obf.json  qa-plan.json  staging-plan.json  test1-plan.json  test2-plan.json
tests/: __init__.py  conftest.py
(+128 files in other folders)
