[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tf-plan-analyzer"
version = "1.0.0"
description = "Terraform plan analysis and comparison tool"
requires-python = ">=3.9"
dependencies = []
authors = [
    {name = "Terraform Plan Analyzer Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["terraform", "plan", "analysis", "comparison", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=4.0"]

[project.scripts]
tf-plan-analyzer = "src.lib.analyze_plan:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
